-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 16.0.0
-
None
-
db11237dd (master)
Following the steps from tests/manual/remotelinux/remotelinux-testplan.md does not lead to the automatic selection of the existing device, the combobox is empty.
-
- ## Create a kit for building
1. Go to `Edit -> Preferences -> Kits`.
2. Create a new kit and set `Build Device` to `Remote Linux` device. The device created
in the previous step should get chosen automatically in the `Device` combo box.
3. Press the "OK" button.
- ## Create a kit for building
| For Gerrit Dashboard: QTCREATORBUG-32124 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 610382,2 | ProjectExplorer: Finish consolidating build and run device aspects | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |