ProjectExplorer: Finish consolidating build and run device aspects

The aspect factories were almost, but not entirely the same, leading to
annoying differences in behavior. They now share the structural
implementation.

Fixes: QTCREATORBUG-32124
Change-Id: I7282141c2a0b4a6505dfdcb4b177bee558afd48b
Reviewed-by: hjk <hjk@qt.io>